# basimol

./: .gitignore  CHANGELOG.md  README.md  conftest.py  deps.edn  pixi.toml  pyproject.toml
.github/workflows/: docs.yaml
docs/: _quarto.yml  about.qmd  basilisp.qmd  index.qmd
docs/examples/: Rapamycin.qmd
src/basimol/: __init__.py  core.lpy  example_01.lpy  styles.lpy
src/molnodes-basilisp/: main.clj
src/molnodes_basilisp/: core.lpy  example_01.lpy
tests/molnodes_basilisp/: core_test.lpy  test_core.lpy
