[project]
name = "molnodes_basilisp"
version = "0.1.0"
description = "Evaling Molecular Nodes in Blender"
authors = [{name = "Zachary Charlop-Powers", email = "zach.charlop.powers@gmail.com"}]
requires-python = ">= 3.11"
dependencies = [
    "basilisp",
    "basilisp-blender",
    "biotite",
    "bpy",
    "databpy",
    "molecularnodes"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "==3.11"
pip = "*"
ffmpeg-python = "*"
ffmpeg = "*"
opencv = "*"
numpy = "<2.0"
ipython = "*"

[tool.pixi.pypi-dependencies]
molnodes_basilisp = { path = ".", editable = true }
opencv-python = "*"
platformdirs = "*"


[tool.pixi.tasks]
remove = "rm -rf /Applications/Blender.app/Contents/Resources/4.3/python"
repl = "/Applications/Blender.app/Contents/MacOS/Blender --python-use-system-env --python scripts/start_nrepl.py"
test = "pytest"

