[project]
name = "basimol"
version = "0.1.0"
description = "Evaling Molecular Nodes in Blender"
authors = [{name = "Zachary Charlop-Powers", email = "zach.charlop.powers@gmail.com"}]
requires-python = "== 3.11"
dependencies = [
    "basilisp",
    "basilisp-blender",
    "biotite",
    "bpy",
    "databpy",
    "molecularnodes"
]
packages = [
    { include = "basimol", from = "src" },
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


